[metadata]
name = vnpy_xt
version = attr: vnpy_xt.__version__
url = https://www.vnpy.com
author = Xiaoyou Chen
author_email = xiaoyou.chen@mail.vnpy.com
description = Xuntou datafeed for VeighNa quant trading framework.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    quant
    quantitative
    investment
    trading
    algotrading
classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Office/Business :: Financial :: Investment
    Programming Language :: Python :: Implementation :: CPython
    Natural Language :: Chinese (Simplified)
build_with_nuitka = True

[options]
packages = find:
include_package_data = True
zip_safe = False
