[metadata]
name = vnpy_xt
version = 1.2.1
url = https://www.vnpy.com
author = Xiaoyou Chen
author_email = xiaoyou.chen@mail.vnpy.com
description = Xuntou datafeed for VeighNa quant trading framework.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    quant
    quantitative
    investment
    trading
    algotrading
classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Office/Business :: Financial :: Investment
    Programming Language :: Python :: Implementation :: CPython
    Natural Language :: Chinese (Simplified)

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    xtquant>=240613.1.1
    filelock
